--- a/Practice/Day 8 Practice.ipynb
+++ b/Practice/Day 8 Practice.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -20,19 +20,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2015\n",
-      "COMMON\n"
+      "2016\n",
+      "It is a leap year\n"
      ]
     }
    ],
    "source": [
     "year = int(input())\n",
     "if year % 400 ==0:\n",
-    "    print(\"LEAP\")\n",
+    "    print(\"It is a leap year\")\n",
     "elif year % 4 ==0 and year % 100 !=0:\n",
-    "    print(\"LEAP\")\n",
+    "    print(\"It is a leap year\")\n",
     "else:\n",
-    "    print(\"COMMON\")"
+    "    print(\"It is not a leap year\")"
    ]
   },
   {
@@ -76,62 +76,6 @@
     "    print(\"2\")\n",
     "else:\n",
     "    print(\"0\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Let's play !\n",
-      "Rock breaks Scissor, Scissor cuts a Paper and Paper covers Rock\n",
-      "Enter either rock, paper or scissor:  rock\n",
-      "Computer = scissor\n",
-      "You = rock\n",
-      "You win !, Play Again\n",
-      "Enter either rock, paper or scissor:  scissor4\n",
-      "Computer = paper\n",
-      "You = scissor4\n",
-      "You Lost !, Play Again\n",
-      "Enter either rock, paper or scissor:  scissor\n",
-      "Computer = scissor\n",
-      "You = scissor\n",
-      "Tie !, Wanna try again.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# A simple rock, paper, scissor game\n",
-    "\n",
-    "print (\"Let's play !\")\n",
-    "print (\"Rock breaks Scissor, Scissor cuts a Paper and Paper covers Rock\")\n",
-    "\n",
-    "import random\n",
-    "def check_winner():\n",
-    "    while True:\n",
-    "        call = input(\"Enter either rock, paper or scissor:  \").lower()    \n",
-    "        choice = random.choice(['rock','paper','scissor'])\n",
-    "        print (\"Computer = \"+ choice)\n",
-    "        print (\"You = \"+ call)\n",
-    "        if call  == choice:\n",
-    "            print (\"Tie !, Wanna try again.\")\n",
-    "        else:\n",
-    "            if call == 'rock' and choice == 'scissor':\n",
-    "                print (\"You win !, Play Again\")\n",
-    "            elif call == 'scissor' and choice == 'paper':\n",
-    "                print (\"You win !, Play Again\")\n",
-    "            elif call == 'paper' and choice == 'rock':\n",
-    "                print (\"You win !, Play Again\")\n",
-    "            else:\n",
-    "                print (\"You Lost !, Play Again\")\n",
-    "            \n",
-    "check_winner()"
    ]
   }
  ],
